<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guessing Game</string>
    <string name="action_settings">Settings</string>


    <string name="creatd_by">- By Joshi Viral H</string>
    <string name="g_game_hdr">Guessing Game</string>
    <string name="g_game_text">Enter range from which to generate number</string>
    <string name="start_btn">Start Game</string>
    <string name="game_guess">Guess #</string>
    <string name="submit_guess">Submit Guess</string>
    <string name="guessed_result">You have 10 chances.</string>





</resources>
