<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".GameActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86E2D5"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/g_game_hdr"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="25sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/game_hdr"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/g_game_text"
        android:layout_below="@+id/game_hdr"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000"
        android:id="@+id/game_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="7"
        android:hint="Low #"
        android:id="@+id/l_num"
        android:layout_below="@+id/game_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="7"
        android:hint="High #"
        android:id="@+id/h_num"
        android:layout_alignBottom="@+id/l_num"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:id="@+id/start_btn"
        android:layout_below="@+id/l_num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        style="?android:buttonBarButtonStyle"
        android:padding="5dp"
        android:textColor="#D24D57"
        android:textAllCaps="false"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:hint="@string/game_guess"
        android:id="@+id/game_guess"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/start_btn"
        android:layout_toStartOf="@+id/start_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_guess"
        android:id="@+id/submit_guess"
        style="?android:buttonBarButtonStyle"
        android:padding="5dp"
        android:textColor="#D24D57"
        android:textAllCaps="false"
        android:layout_alignBottom="@+id/game_guess"
        android:layout_toRightOf="@+id/start_btn"
        android:layout_toEndOf="@+id/start_btn" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/guessed_result"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:id="@+id/guessed_result"
        android:textAllCaps="false"
        android:layout_below="@+id/game_guess"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/btns"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Rules"
            android:layout_weight=".33"
            android:textSize="20sp"
            android:textAllCaps="false"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/game_rules"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Reset"
            android:layout_weight=".33"
            android:textSize="20sp"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/game_reset"
            android:background="#81CFE0"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Great ppl"
            android:layout_weight=".33"
            android:textSize="20sp"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/great_ppl"
            android:textAllCaps="false"/>
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="">
            </com.google.android.gms.ads.AdView>

            </TableRow>
    </TableLayout>

</RelativeLayout>